--- a/flexb.html
+++ b/flexb.html
@@ -13,19 +13,19 @@
 
 
     <div class="header">
-        <h1> FLEXBOX PHOTO GALLERY</h1>
+        <h1> National Hamburger Day </h1>
       </div>
       <div id="gallery">
-        <img src="C:/Users/devon/Downloads/Untitled design (2).jpg"/>
-        <img src="C:/Users\devon/Downloads/Untitled design (3).jpg"/>
-        <img src="C:/Users/devon/Downloads/Untitled design (7).jpg"/>
-        <img src= "C:/Users/devon/Downloads/Untitled design (5).jpg"/>
-        <img src="C:/Users/devon/Downloads/Untitled design (1).jpg"/>
-        <img src="C:/Users/devon/Downloads/Untitled design (4).jpg"/>
-        <img src="C:/Users/devon/Downloads/Untitled design (8).jpg"/>
-        <img src="C:/Users/devon/Downloads/Untitled design.png"/>
-        <img src="C:/Users/devon/Downloads/Untitled design (9).jpg">
-        <img src="C:/Users/devon/Downloads/Untitled design (10).jpg"/>
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/Untitled design.png">
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/hamb 2.png"/>
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/hamb 3.png"/>
+        <img src= "C:/Users/devon/Downloads/flexbox gallery photos/hamb 4.png"/>
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/hamb 5.png"/>
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/hamb 6.png">
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/hamb 7.png"/>
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/hamb8.png"/>
+        <img src="C:\Users\devon\Downloads\flexbox gallery photos\hamb 9.png">
+        <img src="C:/Users/devon/Downloads/flexbox gallery photos/hamb 10.png"/>
       </div>
 
 
